Fixed some problems in management_controller and added some endpoints in swagger.yaml
